--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,6 @@
 .card-container:hover {
   transform: scale(1.3, 1.3);
   z-index: 1;
-  box-shadow: 0 32px 54px rgba(3, 3, 3, 0.12);
 }
 
 .image-wrapper {
@@ -132,13 +131,18 @@
 
 @media (max-width: 650px) {
   .header-lg {
-    font-size: 1.9rem;
+    font-size: 1.6rem;
   }
 
   .card-container {
     width: 100%;
     margin-right: 0;
     transition: none;
+  }
+
+  .card-container:hover {
+    transform: none;
+    z-index: 0;
   }
 
   .header-md {
